fix javascript access

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
     <head>
         <title> SQLizer </title>
         <script src="https://unpkg.com/compromise@latest/builds/compromise.min.js"></script>
-        <script src="pluralize-master/pluralize.js"></script>
+        <script src="https://github.com/subhasrikanth23/Naive-SQLizer/blob/master/public/pluralize-master/pluralize.js"></script>
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-        <script type="text/javascript" src = "parse.js"></script>
+        <script type="text/javascript" src = "https://github.com/subhasrikanth23/Naive-SQLizer/blob/master/public/parse.js"></script>
         <style>
             hr
             {
