--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title> SQLizer </title>
         <script src="https://unpkg.com/compromise@latest/builds/compromise.min.js"></script>
         <script src="https://raw.githubusercontent.com/subhasrikanth23/Naive-SQLizer/master/pluralize-master/pluralize.js"></script>
-        <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src="https://raw.githubusercontent.com/subhasrikanth23/Naive-SQLizer/master/parse.js"></script>
         <style>
             hr
