--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
     <head>
         <title> SQLizer </title>
         <script src="//unpkg.com/compromise@latest/builds/compromise.min.js"></script>
-        <script src="//raw.githubusercontent.com/subhasrikanth23/Naive-SQLizer/master/pluralize-master/pluralize.js"></script>
+        <script src="//cdn.rawgit.com/subhasrikanth23/Naive-SQLizer/master/pluralize-master/pluralize.js"></script>
         <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
-        <script src="//raw.githubusercontent.com/subhasrikanth23/Naive-SQLizer/master/parse.js"></script>
+        <script src="//cdn.rawgit.com/subhasrikanth23/Naive-SQLizer/master/parse.js"></script>
         <style>
             hr
             {
