--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <title> SQLizer </title>
-        <script src="//unpkg.com/compromise@latest/builds/compromise.min.js"></script>
-        <script src="//cdn.rawgit.com/subhasrikanth23/Naive-SQLizer/master/pluralize-master/pluralize.js"></script>
-        <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
-        <script src="//cdn.rawgit.com/subhasrikanth23/Naive-SQLizer/master/parse.js"></script>
+        <script src="https://unpkg.com/compromise@latest/builds/compromise.min.js"></script>
+        <script src="https://rawgit.com/subhasrikanth23/Naive-SQLizer/master/pluralize-master/pluralize.js"></script>
+        <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
+        <script src="https://rawgit.com/subhasrikanth23/Naive-SQLizer/master/parse.js"></script>
         <style>
             hr
             {
